--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/doc.webp" />
+    <link rel="icon" type="image/webp" href="/profile-pic ansh.png" />      
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bare And Bear</title>
+    <title>Ansh Chaurasiya</title>
   </head>
   <body>
     <div id="root"></div>
